# actix-yew-test

./: Cargo.toml  Makefile
client/: Cargo.toml
client/src/: main.rs
client/src/components/: mod.rs  row.rs  toggle.rs
migrations/2018-07-10-172636_create_users/: up.sql
migrations/2018-07-10-172935_create_todos/: up.sql
server/: Cargo.toml
server/src/: db.rs  error.rs  main.rs  schema.rs
src/: main.rs
static/: client.js  client.wasm  index.html
