[package]
name = "server"
version = "0.1.0"
authors = ["Jake Sandler <jsandler18@gmail.com>"]
workspace = ".."

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
dotenv = "0.9.0"
actix-web = "0.6"
actix = "0.5"
log = "0.4"
env_logger = "0.5"
derive-error = "0.0.3"
